# jsonviewer

./: CLAUDE.md  README.md  pyproject.toml
src/jv/: __init__.py  __main__.py  cli.py
src/jv/core/: __init__.py  path.py  search.py
src/jv/tui/: __init__.py  app.py
src/jv/tui/styles/: app.tcss
src/jv/tui/widgets/: __init__.py  json_tree.py  search_bar.py
src/jv/utils/: __init__.py  clipboard.py  file_io.py
src/jv/web/: __init__.py  server.py
tests/: __init__.py
tests/fixtures/: sample.json
