[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jv"
version = "0.1.0"
description = "A powerful JSON viewer for terminal and browser"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pramod Phuyal" }
]
keywords = ["json", "viewer", "cli", "tui", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "textual>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
web = [
    "uvicorn>=0.23.0",
]
schema = [
    "jsonschema>=4.20.0",
]
streaming = [
    "ijson>=3.2.0",
]
export = [
    "pyyaml>=6.0.0",
]
query = [
    "jmespath>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
all = ["jv[web,schema,streaming,export,query]"]

[project.scripts]
jv = "jv.cli:app"

[project.urls]
Homepage = "https://github.com/iampramodphuyal/jv"
Repository = "https://github.com/iampramodphuyal/jv"

[tool.hatch.build.targets.wheel]
packages = ["src/jv"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
